--- a/src/components/sections/sections.css
+++ b/src/components/sections/sections.css
@@ -1,5 +1,56 @@
 .section_first {
-    height: 800px;
-    /* background: rgba(1, 1, 1, .3); */
-    /* background: url('./images/section1.jpg'); */
+  height: 800px;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+.filter {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.35);
+}
+
+.container {
+  max-width: 1190px;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.main-text {
+  color: #ffffff;
+  font-family: "Raleway", Sans-serif;
+  font-size: 83px;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1.3em;
+  letter-spacing: 16px;
+}
+.tempoparry-text {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Raleway", Sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 2px;
+}
+.shop-link {
+  font-family: "Raleway", Sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: underline;
+  line-height: 16px;
+  letter-spacing: 2px;
+  fill: #ffffff;
+  color: #ffffff;
+  cursor: pointer;
+  transition: linear 0.3s;
+}
+.shop-link:hover {
+  font-size: 11px;
 }
